@startuml

title __NECKLACECUT's Class Diagram__\n

  package  {
    class Cut {
    }
  }
  

  package  {
    class JCuttedNecklace {
    }
  }
  

  package  {
    class JNecklace {
    }
  }
  

  package  {
    class MainPanel {
    }
  }
  

  package  {
    class Necklace {
    }
  }
  

  package  {
    class myFrame {
    }
  }
  

  Cut o-- Necklace : necklace
  JCuttedNecklace -up-|> JComponent
  JNecklace -up-|> JComponent
  MainPanel -up-|> Container
  MainPanel o-- JNecklace : JNecklace1
  MainPanel o-- JNecklace : JCuttedNecklace1
  MainPanel o-- Necklace : necklace
  MainPanel o-- Cut : cut
  myFrame -up-|> JFrame
  myFrame o-- Necklace : necklace
  myFrame o-- Cut : cut


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
